--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -179,7 +179,7 @@ input, select, textarea {
 		font-weight: 600;
 		line-height: 1.5;
 		margin: 0 0 1rem 0;
-		text-transform: uppercase;
+		/*text-transform: uppercase;*/
 		letter-spacing: 0.2rem;
 	}
 
@@ -1288,8 +1288,8 @@ input, select, textarea {
 			}
 
 		#header .logo {
-			width: 5.5rem;
-			height: 5.5rem;
+			width: 10rem;
+			height: 10rem;
 			line-height: 5.5rem;
 			border: solid 1px #ffffff;
 			border-radius: 100%;
@@ -1438,8 +1438,8 @@ input, select, textarea {
 				}
 
 			#header .logo {
-				width: 6rem;
-				height: 6rem;
+				width: 5rem;
+				height: 5rem;
 				line-height: 4.75rem;
 			}
 
