--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -956,10 +956,13 @@ input, select, textarea {
 
 		table th {
 			color: #ffffff;
+			/*
 			font-size: 0.9em;
 			font-weight: 600;
-			padding: 0 0.75em 0.75em 0.75em;
+			*/
+			padding: 0.75em 0.75em 0.75em 0.75em;
 			text-align: left;
+			vertical-align: top;
 		}
 
 		table thead {
