--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1397,7 +1397,7 @@ input, select, textarea {
 				#header nav ul li a {
 					display: block;
 					min-width: 7.5rem;
-					height: 2.75rem;
+					height: auto;
 					line-height: 2.75rem;
 					padding: 0 1.25rem 0 1.45rem;
 					/*text-transform: uppercase;*/
