--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -216,7 +216,7 @@ input, select, textarea {
 		font-weight: 600;
 		line-height: 1.5;
 		margin: 0 0 1rem 0;
-		text-transform: uppercase;
+		/*text-transform: uppercase;*/
 		letter-spacing: 0.2rem;
 	}
 
@@ -419,7 +419,7 @@ input, select, textarea {
 		letter-spacing: 0.2rem;
 		line-height: 1.5;
 		margin: 0 0 1rem 0;
-		text-transform: uppercase;
+		/*text-transform: uppercase;*/
 	}
 
 	input[type="text"],
@@ -1067,7 +1067,7 @@ input, select, textarea {
 		padding: 0 1.25rem 0 1.35rem;
 		text-align: center;
 		text-decoration: none;
-		text-transform: uppercase;
+		/*text-transform: uppercase;*/
 		white-space: nowrap;
 	}
 
@@ -1367,7 +1367,7 @@ input, select, textarea {
 				}
 
 			#header .content p {
-				text-transform: uppercase;
+				/*text-transform: uppercase;*/
 				letter-spacing: 0.4rem;
 				font-size: 2rem;
 				line-height: 2;
@@ -1679,7 +1679,7 @@ input, select, textarea {
 			font-size: 0.6rem;
 			opacity: 0.75;
 			margin-bottom: 0;
-			text-transform: uppercase;
+			/*text-transform: uppercase;*/
 		}
 
 		body.is-article-visible #footer {
